tests/baselines/reference/invalidThrowStatement.errors.txt
==== tests/cases/compiler/invalidThrowStatement.ts (2 errors) ====
    throw; 
         ~
!!! invalidThrowStatement.ts(1,6): error TS1003: Identifier expected.
    
    export throw null;
    ~~~~~~
!!! invalidThrowStatement.ts(3,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    